# [1.6.x] - 2019-05-22

## New

- added icon `shape-lock`
- added `block-info-success`/`block-info-standard-success` in containers

## Updated/fixes

- Updated fake checkbox in conversations (WIP)


# [1.6.9] - 2019-05-22

## New

- sticky header for settings (using `.sticky-title` class, and `sticky-title--onTop` modifier to remove `box-shadow` at the top, has to be managed via JS)
- added container `container-section-sticky` class for pages using sticky header (for each section)
- also added modifier `container-section-sticky--fullwidth` modifier class to remove `max-width` if needed.
- updated smooth scrolling feature on Design System website (used https://github.com/zengabor/zenscroll)

## Updated/fixes

- update modal positionning (WIP for Safari bugs)
- updated `pm-label` class (set up to `width` to avoid bad alignments and add `padding` to the right)
- removed decoration from `pm-buttons` (except for `.pm-button--link`)
- added examples of vertical centering in forms


# [1.6.8] - 2019-05-19

## New

- add `capitalize` helper


# [1.6.7] - 2019-05-14

## Updated/fixes

- fixed bug on button group with 2 buttons `last/first-of-type`
- revamped drop down code (removed class, simplified, choosed classname more generic)
- also moved button classes to drop down and generalised `focus-within` 
- added group button example with colors
- fixed color management for caret
- updated leftArrow/rightArrow to modifier classes

Bonuses: 
- added modifier `wizard-container--noTextDisplayed` for wizard (hides the current step)
- fixed button--link modifier (background transparent
- documentation for drop down in button groups


# [1.6.6] - 2019-05-13

## New

- wizard component
- add `shadow-container` class
- updated/standardized animations and classnames 
  - update notifications/modals after discussion with @mmso
  - documentated in namespacing classes
  - added mention of modifier convention