@@ -10,7 +10,7 @@ html { box-sizing: border-box; }
 }
 
 /* reset minimum */
-html, body, blockquote, ul, ol, form, button { margin: 0; padding: 0; }
+html, body, blockquote, ul, ol, form, button, figure { margin: 0; padding: 0; }
 button { border: 0; }
 p, ul, ol, dl, blockquote, pre, td, th {
   font-size: 1em;
