@@ -416,3 +416,28 @@ section: design
 </code></pre>
   </div>
 </div>
+
+<h2><code>figure</code>/<code>figcaption</code></h2>
+
+<p>These tags are CSS-reseted, if you want to add <code>padding</code>, use helpers.</p>
+
+<div class="flex flex-spacebetween mb2 onmobile-flex-column">
+  <div class="w49 pt0-5">
+    <figure role="group">
+      <img src="/assets/img/design-system-website/Protonmail_logo.svg" width="200" alt="Protonmail" />
+      <figcaption>
+        This is the nice logo of of ProtonMail
+      </figcaption>
+    </figure>
+  </div>
+  <div class="w49 aligncenter flex-self-vcenter">
+    <pre class=" language-markup"><code>&lt;figure role="group"&gt;
+  &lt;img src="…" alt="Protonmail" /&gt;
+  &lt;figcaption&gt;
+    This is the nice logo of of ProtonMail
+  &lt;/figcaption&gt;
+&lt;/figure&gt;
+</code></pre>
+  </div>
+</div>
+
