@@ -8,6 +8,7 @@
 ## Updated/fixes
 
 - Updated fake checkbox in conversations (WIP)
+- Reseted `figure` default browsers styles
 
 
 # [1.6.9] - 2019-05-22
